[package]
name = "p0036"
version = "0.1.0"
authors = ["Scott Bailey <Scott@BaileyBuilt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fraction = "0.8.0"
#num-bigint = "0.4"
#itertools = "0.10"
#sb = { path = "../sb" }
